@@ -27,7 +27,8 @@
 
 NIH_BEGIN_EXTERN
 
-NihIo *control_open  (void);
+NihIo *control_open  (void)
+	__attribute__ ((warn_unused_result, malloc));
 void   control_close (void);
 
 NIH_END_EXTERN
