@@ -1,5 +1,12 @@
 2007-02-03  Scott James Remnant  <scott@netsplit.com>
 
+	* init/control.c: Add needed attributes; tidy up formatting.
+	(control_open): Don't let ENOMEM fail opening the control socket.
+	* init/control.h: Add needed attributes.
+	* init/tests/test_control.c (test_open): Test for failed allocation.
+	* init/main.c (term_handler): Make sure we catch failure to open
+	the control socket again.
+
 	* TODO: Update
 
 	* init/cfgfile.c (cfg_watch_dir): Clean this up a bit; now we only
